# discordbot

./: .ex_env  .gitignore  Cargo.toml  README.md  docker-compose.yaml  start.sh
docker_files/: init.sql  sql_setup.sh
src/: main.rs
