[package]
name = "aibot"
version = "0.1.0"
edition = "2024"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
serenity = { version = "0.12" }
sqlx = { version = "0.7", features = [ "mysql", "runtime-tokio", "tls-rustls" ] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1.45.1", features = ["full"] }
